--- a/index.html
+++ b/index.html
@@ -17,6 +17,166 @@
   </head>
 
   <body>
+    <div class="wrapper">
+      <div class="gallery">
+        <div class="page page-one">
+          <div class="content-inner">
+            <h1>Hello.</h1>
+            <h2>My name is Hugo.</h2>
+            <h3>I am a Interaction Designer.</h3>
+            <p>I study in <a href="www.hut.edu.cn/" class="inner-link">Hunan University of Technology</a>.</p>
+            <p>I'm from GuangZhou.</p>
+            <div>
+              I Like
+              <span class="new big"></span><span class="old big"></span>
+            </div> 
+            
+            <a href="#" class="quiz">Okay,how about your courses?</a>
+          </div>
+        </div>
+
+        <div class="page page-two">
+          <div class="content-inner">
+            <h3>I major Digital Media Arts,which is a interdisciplinary study.<br>
+              However,I study HTML ,CSS and javascript on my own.<br>
+              At the same time,I study Interaction from Teacher Fei.</h3>
+            <a href="#" class="quiz">Oh,sounds you know a lot,tell me about your study way?</a>
+          </div>
+        </div>
+
+        <div class="page page-three">
+          <div class="content-inner">
+            <h3>Actually,I learn a lot from <a href="#" class="big inner-link">IDL</a>,<br>
+              which benfit me a lot,no matter<br>
+              skills and mind.Now,I am a front-end<br>
+              Web developer working for <a href="m.okay.do" class="inner-link big">OKMemo</a>.<br>
+              I am keeping studying from different ways,<br>
+              such as mooc,scanning more preview web<br>
+              from other countrys,not limited in class.</h3>
+            <a href="#" class="quiz">What is OKMemo,it seems funny.</a>
+          </div>
+        </div>
+
+        <div class="page page-four">
+          <div class="content-inner">
+            <h3><a href="m.okay.do" class="big inner-link">OKMemo</a> is a web application that<br>
+              helps you take notes, download images<br>
+              and share web pages.Building your<br>
+              knowledge and capturing your inspiration.<br>
+              It is one of the most effective note taking<br>
+              and page grabbing tools.</h3>
+            <a href="#" class="quiz">Cooool!What else can you tell me about your work?</a>
+          </div>
+        </div>
+
+        <div class="page page-five">
+          <div class="content-inner">
+            <h3>Creating some funny flat icons,<br>
+            pattern and character is one of my habbit,too.Hover,my teacher<br>
+            thinks that it wastes my time to practice and creat such things.</h3>
+            <a href="#" class="quiz">You can draw icons?You must know software.</a>
+          </div>
+        </div>
+
+        <div class="page page-six">
+          <div class="content-inner">
+            <h3>Yes,I has learned a lot of softwares,<br>
+            likes Adobe Illustrator,Photoshop,Axure RP.<br>
+            I deeply know that softwares just is a tool<br>
+            no matter how well I use them,the most<br>
+            important thing is our mind.<br>
+            So I always arouse my attention<br>
+            that I should learn the world better,<br>
+            not limited here.</h3>
+            <a href="#" class="quiz">You say you know about web,does it mean you can programming?</a>
+          </div>
+        </div>
+
+        <div class="page page-seven">
+          <div class="content-inner">
+            <h3>I learn a little web language,<br>
+            as many people say,which is HTML5,<br>
+            CSS3,and a little knowledge<br>
+            about javascript and jQuery.<br>
+            I don't know why I start learning<br>
+            Web programming,but it's <br>
+            such a cool thing I never regret.<br>
+            And I will go ahead<br>
+            no matter what I will meet.</h3>
+            <a href="#" class="quiz">Now just show me your work.</a>
+          </div>
+        </div>
+
+        <div class="page page-idl">
+          <div class="content-inner">
+            <div class="img-wrapper">
+              <img src="images/home.png" alt="实验室">
+            </div>
+          </div>
+        </div>
+
+        <div class="page page-dc-heros">
+          <div class="content-inner">
+            <div class="img-wrapper">
+              <img src="images/green-light.png" alt="绿灯">
+              <img src="images/wonder-woman.png" alt="神奇女侠">
+              <img src="images/injustice-superman.png" alt="不义超人">
+              <img src="images/batman.png" alt="蝙蝠侠">
+              <img src="images/flash.png" alt="闪电侠">
+            </div>
+          </div>
+        </div>
+
+        <div class="page page-twelve-babys">
+          <div class="content-inner">
+            <div class="img-wrapper">
+              <img src="images/mouse.png" alt="老鼠">
+              <img src="images/cow.png" alt="奶牛">
+              <img src="images/tiger.png" alt="老虎">
+              <img src="images/rabbit.png" alt="兔子">
+            </div>
+          </div>
+        </div>
+
+        <div class="page page-twelve-babys">
+          <div class="content-inner">
+            <div class="img-wrapper">
+              <img src="images/dragon.png" alt="龙">
+              <img src="images/snake.png" alt="蛇">
+              <img src="images/horse.png" alt="老马">
+              <img src="images/sheep.png" alt="黑羊">
+            </div>
+          </div>
+        </div>
+
+        <div class="page page-twelve-babys">
+          <div class="content-inner">
+            <div class="img-wrapper">
+              <img src="images/monkey.png" alt="猴">
+              <img src="images/chicken.png" alt="鸡">
+              <img src="images/dog.png" alt="狗">
+              <img src="images/pig.png" alt="猪">
+            </div>
+          </div>
+        </div>
+
+        <div class="page page-contact">
+          <div class="content-inner">
+            <h2>CONTACT ME</h2>
+            <h3>Email: Hugo@okay.do</h3>
+            <h3>WeChat ID:  TTTT_jw</h3>
+            <h3>Sina Weibo:  谭靖纬</h3>
+            <h3>QQ:  287621577</h3>
+            <h3>Zcool:  <a href="http://www.zcool.com.cn/u/1986192" class="inner-link">here.</a></h3>
+          </div>
+        </div>
+      </div>
+    </div>
     
+    <!-- 脚本 -->
+    <script src="scripts/jquery-2.1.3.min.js"></script>
+    <script src="scripts/jquery.transit.min.js"></script>
+    <script src="scripts/flickity.pkgd.min.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
