--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>Hello.</h1>
             <h2>My name is Hugo.</h2>
             <h3>I am a Interaction Designer.</h3>
-            <p>I study in <a href="www.hut.edu.cn/" class="inner-link">Hunan University of Technology</a>.</p>
+            <p>I study in <a href="http://www.hut.edu.cn/" class="inner-link">Hunan University of Technology</a>.</p>
             <p>I'm from GuangZhou.</p>
             <div>
               I Like
