--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <div class="wrapper">
+   <!--  <div class="wrapper">
       <div class="gallery">
         <div class="page page-one">
           <div class="content-inner">
@@ -170,12 +170,12 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     
     <!-- 脚本 -->
-    <script src="scripts/jquery-2.1.3.min.js"></script>
+    <!-- <script src="scripts/jquery-2.1.3.min.js"></script>
     <script src="scripts/jquery.transit.min.js"></script>
     <script src="scripts/flickity.pkgd.min.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main.js"></script> -->
   </body>
 </html>
