--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   </head>
 
   <body>
+  <a href="index2.html">turn to index2 good luck</a>
+
    <!--  <div class="wrapper">
       <div class="gallery">
         <div class="page page-one">
