--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="layout/Reset.css"/>
     <link rel="stylesheet" href="layout/style.css"/>
     <script src="build/jquery.min.js"></script>
+    <script src="build/jquery-autoPlay.js"></script>
     <script src="script/main.js"></script>
     <script src="build/react.js"></script>
     <script src="build/react-dom.js"></script>
