--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="build/jquery.min.js"></script>
     <script src="build/jquery-autoPlay.js"></script>
     <script src="build/showdown.min.js"></script>
+    <script src="script/tool.js"></script>
     <script src="script/main.js"></script>
     <script src="build/react.js"></script>
     <script src="build/react-dom.js"></script>
