--- a/mobile/index.html
+++ b/mobile/index.html
@@ -6,8 +6,29 @@
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
     <title>mobile-test</title>
+    <link rel="stylesheet" href="../layout/Reset.css"/>
+    <style>
+        p{
+            padding: 5px;
+            margin-left: 10px;
+        }
+
+        a{
+            font-size: 18px;
+            color: #100F17;
+            margin-left: 15px;
+        }
+
+        div{
+            padding: 40px;
+        }
+    </style>
 </head>
 <body>
-    <p>这是一个临时的移动端网页.</p>
+    <div>
+        <p>这是一个临时的移动端网页.</p>
+        <p>想了解更多请在电脑端访问</p>
+        <a href="http://HugoTam.github.io">HugoTam.github.io</a>
+    </div>
 </body>
 </html>
