--- a/mobile/index.html
+++ b/mobile/index.html
@@ -22,12 +22,17 @@
         div{
             padding: 40px;
         }
+
+        span{
+            opacity: .4;
+        }
+
     </style>
 </head>
 <body>
     <div>
         <p>这是一个临时的移动端网页.</p>
-        <p>想了解更多请在电脑端访问</p>
+        <p>想了解更多请在<span>*电脑端*</span>访问</p>
         <a href="http://HugoTam.github.io">HugoTam.github.io</a>
     </div>
 </body>
