--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>test</title>
     <link rel="stylesheet" href="layout/Reset.css"/>
     <link rel="stylesheet" href="layout/style.css"/>
+    <link rel="stylesheet" href="layout/expDetailCon.css"/>
     <script src="build/jquery.min.js"></script>
     <script src="build/jquery-autoPlay.js"></script>
     <script src="build/showdown.min.js"></script>
