--- a/mobile/index.html
+++ b/mobile/index.html
@@ -7,33 +7,18 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
     <title>mobile-test</title>
     <link rel="stylesheet" href="../layout/Reset.css"/>
-    <style>
-        p{
-            padding: 5px;
-            margin-left: 10px;
-        }
-
-        a{
-            font-size: 18px;
-            color: #100F17;
-            margin-left: 15px;
-        }
-
-        div{
-            padding: 40px;
-        }
-
-        span{
-            opacity: .4;
-        }
-
-    </style>
+    <link rel="stylesheet" href="../layout/mobileStyle.css"/>
+    <script src="../build/jquery.min.js"></script>
+    <script src="../build/showdown.min.js"></script>
+    <script src="../script/tool.js"></script>
+    <script src="../script/date.js"></script>
+    <script src="../build/react.js"></script>
+    <script src="../build/react-dom.js"></script>
 </head>
 <body>
-    <div>
-        <p>这是一个临时的移动端网页.</p>
-        <p>想了解更多请在<span>*电脑端*</span>访问</p>
-        <a href="http://HugoTam.github.io">HugoTam.github.io</a>
+    <div id="container">
     </div>
+
+    <script src="../script/mobileComponents.js"></script>
 </body>
 </html>
