--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<!-- 标题栏 -->
 			<div class="top-info item">
 				<div class="con">
-					<h2>OK记手机版DEMO演示</h2>
+					<h2>过去工作DEMO演示</h2>
 					<p>使用软件：Sketch&nbsp;&amp;&nbsp;Principle</p>
 					<p>制作人：谭靖纬</p>
 					<p>公司所属：长沙快智科技网络有限公司</p>
@@ -94,8 +94,8 @@
 					<h3>功能2：从手机端摘录</h3>
 					<p>具体功能与界面导图如下</p>
 					<div class="processon-link">
-						<a href="http://www.processon.com/view/link/5694dbcde4b0cfc27362d53b">here</a>
-						<p>查看密码：505</p>
+						<a href="https://www.processon.com/view/link/56e049b8e4b035c4f2687910">here</a>
+						<p>查看密码：233</p>
 					</div>
 				</div>
 			</div>
