video name changed

--- a/demo/index.html
+++ b/demo/index.html
@@ -195,7 +195,7 @@
 
 					<div class="demo">
 						<video controls width="300" preload="auto" loop onclick="this.paused?this.play():this.pause();">
-							<source src="video/Settings.webm" type="video/webm">
+							<source src="video/settings.webm" type="video/webm">
 						</video>
 						<h3 class="title">菜单设置</h3>
 						<div class="intro"></div>
