--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
 	<meta charset="UTF-8">
-	<title>应聘UI/交互设计-谭靖纬</title>
+	<title>谭什么的作品集</title>
 	<link rel="stylesheet" href="layout/style.css">
 	<link rel="stylesheet" href="layout/flickity.min.css">
 	<style>
