changes the images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<title>谭什么的作品集</title>
 	<link rel="stylesheet" href="layout/style.css">
 	<link rel="stylesheet" href="layout/flickity.min.css">
+	<!-- 脚本 -->
+	<script src="scripts/jquery-2.1.3.min.js"></script>
+	<script src="scripts/jquery.transit.min.js"></script>
+	<script src="scripts/flickity.pkgd.min.js"></script>
+	<script src="scripts/main.js"></script>
 	<style>
 
 
@@ -142,10 +147,35 @@
 			box-shadow: 0 10px 16px -4px rgba(0,0,0,.4);
 		}
 
+		/*.others .yys-wrapper .img-con .images-yys{
+			display: block;
+			width: 100%;
+		}*/
+
 		.others .yys-wrapper .img-con img{
 			display: block;
 			width: 100%;
 		}
+/*
+		.others .yys-wrapper .img-con .yys01{
+			background: url(./images/yys01.png);
+
+		}
+
+		.others .yys-wrapper .img-con .yys02{
+			background: url(./images/yys02.png);
+
+		}
+
+		.others .yys-wrapper .img-con .yys03{
+			background: url(./images/yys03.png);
+
+		}
+
+		.others .yys-wrapper .img-con .yys04{
+			background: url(./images/yys04.png);
+
+		}*/
 
 		.uxpa-wrapper{
 			/*position: relative;*/
@@ -398,6 +428,10 @@
 				<img src="images/yys03.png" alt="">
 				<img src="images/yys04.png" alt="">
 				<!-- <img src="images/yys.png" alt=""> -->
+				<!-- <div class="images-yys yys01"></div>
+				<div class="images-yys yys02"></div>
+				<div class="images-yys yys03"></div>
+				<div class="images-yys yys04"></div> -->
 			</div>
 		</div>
 		<div class="uxpa-wrapper">
@@ -411,9 +445,4 @@
 		</div>
 	</div>
 </body>
-<!-- 脚本 -->
-	<script src="scripts/jquery-2.1.3.min.js"></script>
-	<script src="scripts/jquery.transit.min.js"></script>
-	<script src="scripts/flickity.pkgd.min.js"></script>
-	<script src="scripts/main.js"></script>
 </html>
