--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			color: #333;
 		    display: block;
 		    margin: 100px auto 80px;
-		    font-size: 16px;
+		    font-size: 20px;
 		    line-height: 1.8;
 		}
 
@@ -197,11 +197,16 @@
 			display: none;
 		}
 
+		.tmp-phone-run-wrapper{
+			background: #90D8FE;
+			padding: 60px 0 80px;
+		}
+
 		.tmp-phone-run{
 			background: #fff;
 		    width: 666px;
 		    box-shadow: 0 10px 16px -4px rgba(0,0,0,.4);
-		    margin: 40px auto;
+		    margin: 0 auto;
 		    padding: 64px 80px;
 		    text-align: center;
 		    font-size: 20px;
@@ -225,14 +230,15 @@
 	</style>
 </head>
 <body>
-	<div class="tmp-phone-run">
-		<img src="images/tamyeah.png" alt="">
-		<p>我是谭什么</p>
-		<p>欢迎来到我的作品集</p>
-		<p>请使用 <b>电脑访问</b> 发现我的更多经历</p>
-		<p>移动端正在适配中......</p>
-		<p>谢谢:)</p>
-
+	<div class="tmp-phone-run-wrapper">
+		<div class="tmp-phone-run">
+			<img src="images/tamyeah.png" alt="">
+			<p>我是谭什么</p>
+			<p>欢迎来到我的作品集</p>
+			<p>请使用 <b>电脑访问</b> 发现我的更多经历</p>
+			<p>移动端正在适配中......</p>
+			<p>谢谢:)</p>
+		</div>
 	</div>
 	<div class="ok-exp-wrapper">
 		<div class="gallery">
