fix the bug in pc

--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
 			display: none;
 		}
 
-		.tmp-phone-run-wrapper{
+		body .tmp-phone-run-wrapper{
+			display: none;
 			background: #90D8FE;
 			padding: 60px 0 80px;
 		}
@@ -217,13 +218,11 @@
 			color: #90D8FE;
 		}
 
-		body.is-phone .tmp-phone-run{
+		body.is-phone .tmp-phone-run-wrapper{
 			display: block;
 		}
 		
-		body .tmp-phone-run{
-			display: none;
-		}
+		
 
 
 
