hide gif when using phone

--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
 		body.is-phone .tmp-phone-run-wrapper{
 			display: block;
 		}
+
+		body.is-phone .gif-wrapper{
+			display: none;
+		}
 		
 		/*flickity css*/
 		.flickity-prev-next-button{
