zip images agagin & show gif after img load

--- a/index.html
+++ b/index.html
@@ -166,6 +166,14 @@
 		    z-index: 99;*/
 		}
 
+		.gif-wrapper img{
+			display: none;
+		}
+
+		.gif-wrapper img.show{
+			display: inline-block;
+		}
+
 		.gif-wrapper{
 			margin: 0 auto;
 			padding: 20px 0 70px;
