--- a/index.html
+++ b/index.html
@@ -269,6 +269,27 @@
 			/*fill: #fff;*/
 		}
 
+		 /*popup*/
+		 .popup{
+		 	position: fixed;
+    bottom: 0;
+    width: 100%;
+    /* margin: 0 auto; */
+    /* height: 400px; */
+    text-align: center;
+
+		 }
+
+		 .popup .tips-flow-firing{
+		 	position: fixed; */
+    display: inline-block;
+    /* width: 500px; */
+    padding: 20px 100px;
+    /* bottom: 10px; */
+    background: #fff;
+
+		 }
+
 
 
 	</style>
@@ -458,18 +479,26 @@
 		<div class="uxpa-wrapper">
 			<div class="img-con">
 				<img src="images/xzcsh01.png" alt="">
+				<img src="images/xzcsh02.png" alt="">
 				<div class="function-gif gif-wrapper">
 					<img class="gif" alt="images/function.gif" src="images/Loading_icon.gif">
 					<!-- <img class="loading-gif" src="images/Loading_icon.gif" alt=""> -->
 				</div>
-				<img src="images/xzcsh02.png" alt="">
+				<img src="images/xzcsh03.png" alt="">
 				<div class="five-menu-gif gif-wrapper">
 					<img class="gif" alt="images/five_menu.gif" src="images/Loading_icon.gif">
 					<!-- <img class="loading-gif" src="images/Loading_icon.gif" alt=""> -->
 				</div>
-				<img src="images/xzcsh03.png" alt="">
+				<img src="images/xzcsh04.png" alt="">
 			</div>
 		</div>
 	</div>
+
+	<!-- <div class="popup">
+		<div class="tips-flow-firing">
+			<p>仿佛听到流量燃烧的声音，请在WIFI或电脑端观看。</p><a href="#" class="ok-btn">明白</a>
+		</div>
+	</div> -->
+
 </body>
 </html>
