--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			position: absolute;
 		    z-index: 99;
 		    right: 122px;
-		    bottom: 114px;
+		    bottom: 102px;
 		}
 
 		.ok-demo-link-wrapper span{
@@ -71,7 +71,7 @@
 			transform: translate(0,-4px);
 		}
 
-		.page .img-con img{
+		.page .img-con .ok-img{
 			width: 100%;
 			box-shadow: 0 6px 16px #ccc;
 			margin-top: 10px;
@@ -82,18 +82,26 @@
 			position: relative;
 		}
 
-		.go-on-tips .go-on-btn{
-			width: 100%;
-		    position: absolute;
-		    bottom: -24px;
+		.go-on-tips img{
+			width: 30px;
+			margin: 0 auto;
+			display: block;
+			padding-top: 10px;
+			-webkit-animation: up-down 1s infinite ease-out;
+			animation: up-down 1s infinite ease-out;
 		}
 
-		.go-on-tips .go-on-btn img{
-		    width: 42px;
-		    margin: 0 auto;
-		    display: block;
-
+		@-webkit-keyframes up-down{
+			0%,100% {transform: translate(0,0);}
+			45% {transform: translate(0,6px);}
 		}
+
+		@keyframes up-down{
+			0%,100% {transform: translate(0,0);}
+			45% {transform: translate(0,6px);}
+		}
+
+
 
 		
 
@@ -208,6 +216,10 @@
 			box-shadow: 0 10px 16px -4px rgba(0,0,0,.4);
 		}
 
+		.uxpa-wrapper .img-con .xzcsh-img{
+			display: block;
+		}
+
 		.uxpa-wrapper .gif-wrapper img{
 			/*width: 100%;*/
 			border-radius: 12px;
@@ -310,7 +322,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/1.png" alt="">
+						<img class="ok-img" src="images/1.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -318,7 +330,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/2.png" alt="">
+						<img class="ok-img" src="images/2.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -326,7 +338,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/3.png" alt="">
+						<img class="ok-img" src="images/3.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -334,7 +346,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/4.png" alt="">
+						<img class="ok-img" src="images/4.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -342,7 +354,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/5.png" alt="">
+						<img class="ok-img" src="images/5.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -350,7 +362,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/6.png" alt="">
+						<img class="ok-img" src="images/6.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -358,7 +370,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/7.png" alt="">
+						<img class="ok-img" src="images/7.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -366,7 +378,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/8.png" alt="">
+						<img class="ok-img" src="images/8.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -374,7 +386,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/9.png" alt="">
+						<img class="ok-img" src="images/9.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -382,7 +394,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/10.png" alt="">
+						<img class="ok-img" src="images/10.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -390,7 +402,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/11.png" alt="">
+						<img class="ok-img" src="images/11.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -398,7 +410,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/12.png" alt="">
+						<img class="ok-img" src="images/12.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -406,7 +418,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/13.png" alt="">
+						<img class="ok-img" src="images/13.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -414,7 +426,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/14.png" alt="">
+						<img class="ok-img" src="images/14.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -422,7 +434,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/15.png" alt="">
+						<img class="ok-img" src="images/15.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -430,7 +442,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/16.png" alt="">
+						<img class="ok-img" src="images/16.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -438,7 +450,7 @@
 			<div class="page">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/17.png" alt="">
+						<img class="ok-img" src="images/17.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -446,21 +458,37 @@
 			<div class="page ok-end">
 				<div class="content-inner">
 					<div class="img-con">
-						<img src="images/18.png" alt="">
+						<img class="ok-img" src="images/18.png" alt="">
 						<div class="ok-demo-link-wrapper">
 							<a class="ok-demo-link" href="http://hugotam.github.io/demo/" target="_blank">查看DEMO视频</a>
 							<span>或</span>
 							<span>下滑继续观看其他作品</span>
+							<div class="go-on-tips"><img src="images/arrow_down.png" alt=""></div>
 						</div>
 					</div>
 				</div>
-				<!-- <div class="go-on-tips"><a href="#" class="go-on-btn"><img src="images/arrow_down.png" alt=""></a></div> -->
 			</div>
 
 		</div>
 	</div>
 
 	<div class="others">
+		<!-- xzcsh -->
+		<div class="uxpa-wrapper">
+			<div class="img-con">
+				<img class="xzcsh-img" src="images/xzcsh01.png" alt="">
+				<img class="xzcsh-img" src="images/xzcsh02.png" alt="">
+				<div class="function-gif gif-wrapper">
+					<img class="gif" alt="images/function.gif" src="images/Loading_icon.gif">
+				</div>
+				<img class="xzcsh-img" src="images/xzcsh03.png" alt="">
+				<div class="five-menu-gif gif-wrapper">
+					<img class="gif" alt="images/five_menu.gif" src="images/Loading_icon.gif">
+				</div>
+				<img class="xzcsh-img" src="images/xzcsh04.png" alt="">
+			</div>
+		</div>
+		<!-- yys -->
 		<div class="yys-wrapper">
 			<div class="intro">
 				<img class="img-cimu" src="images/yys_cimu.png" alt="">
@@ -474,22 +502,6 @@
 				<img src="images/yys02.png" alt="">
 				<img src="images/yys03.png" alt="">
 				<img src="images/yys04.png" alt="">
-			</div>
-		</div>
-		<div class="uxpa-wrapper">
-			<div class="img-con">
-				<img src="images/xzcsh01.png" alt="">
-				<img src="images/xzcsh02.png" alt="">
-				<div class="function-gif gif-wrapper">
-					<img class="gif" alt="images/function.gif" src="images/Loading_icon.gif">
-					<!-- <img class="loading-gif" src="images/Loading_icon.gif" alt=""> -->
-				</div>
-				<img src="images/xzcsh03.png" alt="">
-				<div class="five-menu-gif gif-wrapper">
-					<img class="gif" alt="images/five_menu.gif" src="images/Loading_icon.gif">
-					<!-- <img class="loading-gif" src="images/Loading_icon.gif" alt=""> -->
-				</div>
-				<img src="images/xzcsh04.png" alt="">
 			</div>
 		</div>
 	</div>
