add js click scroll

--- a/index.html
+++ b/index.html
@@ -82,13 +82,17 @@
 			position: relative;
 		}
 
-		.go-on-tips img{
+		.go-on-tips .arrow-down-btn{
 			width: 30px;
 			margin: 0 auto;
 			display: block;
 			padding-top: 10px;
 			-webkit-animation: up-down 1s infinite ease-out;
 			animation: up-down 1s infinite ease-out;
+		}
+
+		.go-on-tips .arrow-down-btn img{
+			width: 100%;
 		}
 
 		@-webkit-keyframes up-down{
@@ -463,7 +467,7 @@
 							<a class="ok-demo-link" href="http://hugotam.github.io/demo/" target="_blank">查看DEMO视频</a>
 							<span>或</span>
 							<span>下滑继续观看其他作品</span>
-							<div class="go-on-tips"><img src="images/arrow_down.png" alt=""></div>
+							<div class="go-on-tips"><a href="#" class="arrow-down-btn"><img src="images/arrow_down.png" alt=""></a></div>
 						</div>
 					</div>
 				</div>
