--- a/index.html
+++ b/index.html
@@ -306,6 +306,43 @@
 
 		 }
 
+		 /*联系我*/
+		.contact-me-wrapper{
+		 	background: #90D8FE;
+			padding: 60px 0 80px;
+		 }
+
+		.contact-me-wrapper .contact-me-inner{
+		 	background: #fff;
+		    width: 666px;
+		    box-shadow: 0 10px 16px -4px rgba(0,0,0,.4);
+		    margin: 0 auto;
+		    padding: 64px 40px;
+		    text-align: center;
+		    font-size: 20px;
+		    border-radius: 8px;
+		 }
+
+		 .contact-me-wrapper .contact-me-inner h1{
+		 	font-size: 28px;
+		 	font-family: STZhongsong;
+		 	padding: 0;
+		 	margin: 0;
+		 	margin-bottom: 16px;
+		 }
+
+		 .contact-me-wrapper .contact-me-inner p{
+		 	font-size: 18px;
+		 	padding: 0;
+		 	margin: 0;
+		 	margin-bottom: 6px;
+		 }
+
+		.contact-me-wrapper .contact-me-inner img{
+		 	width: 160px;
+		 	margin-bottom: 12px;
+		 }
+
 
 
 	</style>
@@ -507,6 +544,16 @@
 				<img src="images/yys03.png" alt="">
 				<img src="images/yys04.png" alt="">
 			</div>
+		</div>
+	</div>
+
+	<div class="contact-me-wrapper">
+		<div class="contact-me-inner">
+			<h1>联系我</h1>
+			<p>微信</p>
+			<img src="images/QR_code.png" alt="微信二维码">
+			<p>手机</p>
+			<p>18620293384</p>
 		</div>
 	</div>
 
