--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
 			</div>
 
 			<div class="hot-img-con">
-				<img src="images/hotland_me.png" alt="">
+				<!-- <img src="images/hotland_me.png" alt=""> -->
 			</div>
 			<div class="p-con">
 				<h2>微信</h2>
