update the okmemo work

--- a/index.html
+++ b/index.html
@@ -220,13 +220,91 @@
 			width: 540px;
 		}
 
-		.uxpa-wrapper .img-con,
-		.ok-show-wrapper .img-con{
+		.uxpa-wrapper .img-con{
 			width: 855px;
 			background: #fff;
 			margin: 120px auto;
 			box-shadow: 0 10px 16px -4px rgba(0,0,0,.4);
 		}
+
+		.ok-show-wrapper .img-con{
+			width: 1080px;
+			margin: 120px auto;
+		}
+
+		.ok-show-wrapper .img-con .ok-gif-con{
+			width: 100%;
+			display: block;
+		}
+
+		.ok-show-wrapper .img-con .drag-add-wrapper,
+		.ok-show-wrapper .img-con .input-add-wrapper,
+		.ok-show-wrapper .img-con .float-add-wrapper{
+			margin: 0 auto 30px;
+			padding-top: 18px;
+			background: #fff;
+		}
+
+		.ok-show-wrapper .img-con .drag-add-wrapper{
+			width: 935px;
+		}
+
+		.ok-show-wrapper .img-con .input-add-wrapper{
+			width: 915px;
+		}
+
+		.ok-show-wrapper .img-con .float-add-wrapper{
+			width: 961px;
+		}
+
+		.ok-show-wrapper .img-con .ok-gif-title{
+			/*width: 560px;*/
+			margin: 0 auto;
+			display: block;
+		}
+
+		.ok-show-wrapper .img-con .ok-img{
+			width: 100%;
+			margin-bottom: 30px;
+			box-shadow: 0 10px 16px -4px rgba(0,0,0,.4);
+		}
+
+		.ok-show-wrapper .img-con .long-pic{
+			margin-bottom: 0px;
+		}
+
+		.ok-show{
+		    width: 100%;
+		    margin-bottom: 30px;
+    		box-shadow: 0 10px 16px -4px rgba(0,0,0,.4);
+		}
+
+		/*链接按钮*/
+		.zcool-link-wrapper{
+			margin: 0 auto;
+			padding: 80px 0;
+		}
+		
+
+		.link-btn{
+			display: block;
+			font: 20px;
+			margin: 0 auto;
+			text-align: center;
+			width: 200px;
+			color: #fff;
+			text-decoration: none;
+			padding: 20px 40px;
+			background-image: linear-gradient(-156deg, #FFE913 7%, #FFC700 100%);
+			box-shadow: 0 6px 17px 0 rgba(249,233,23,0.38);
+			transition: box-shadow .3s;
+			border-radius: 100px;
+		}
+
+		.link-btn:hover{
+			box-shadow: 0 8px 24px 0 rgba(249,233,23,0.48);
+		}
+    
 
 		.uxpa-wrapper .img-con .xzcsh-img,
 		.ok-show-wrapper .img-con .ok-img{
@@ -543,7 +621,40 @@
 		<!-- OK记截屏部分展示 -->
 		<div class="ok-show-wrapper">
 			<div class="img-con">
-				<img class="ok-img" src="images/ok01.png" alt="">
+				<img class="ok-img" src="images/ok_show/1.png" alt="">
+				<img class="ok-img" src="images/ok_show/2.png" alt="">
+				<img class="ok-img" src="images/ok_show/3.png" alt="">
+				<img class="ok-img" src="images/ok_show/4.png" alt="">
+				<img class="ok-img" src="images/ok_show/5.png" alt="">
+				<img class="ok-img" src="images/ok_show/6.png" alt="">
+				<div class="drag-add-wrapper">	
+					<img class="ok-gif-title" src="images/ok_show/6_1.png" alt="">
+					<img class="ok-gif-con" src="images/ok_show/drag_add.gif" alt="">
+				</div>
+				<div class="float-add-wrapper">	
+					<img class="ok-gif-title" src="images/ok_show/6_2.png" alt="">
+					<img class="ok-gif-con" src="images/ok_show/float_add.gif" alt="">
+				</div>
+				<div class="input-add-wrapper">	
+					<img class="ok-gif-title" src="images/ok_show/6_3.png" alt="">
+					<img class="ok-gif-con" src="images/ok_show/input_add.gif" alt="">
+				</div>
+				<img class="ok-img" src="images/ok_show/7.png" alt="">
+				<img class="ok-img" src="images/ok_show/8.png" alt="">
+				<img class="ok-img" src="images/ok_show/9.png" alt="">
+				<img class="ok-img" src="images/ok_show/10.png" alt="">
+				<img class="ok-img" src="images/ok_show/11.png" alt="">
+				<img class="ok-img" src="images/ok_show/12.png" alt="">
+				<img class="ok-img" src="images/ok_show/13.png" alt="">
+				<img class="ok-img" src="images/ok_show/14.png" alt="">
+				<img class="ok-img long-pic" src="images/ok_show/15.png" alt="">
+				<img class="ok-img long-pic" src="images/ok_show/expand_memo.gif" alt="">
+				<img class="ok-img long-pic" src="images/ok_show/search.gif" alt="">
+				<img class="ok-img long-pic" src="images/ok_show/16.png" alt="">
+				<img class="ok-img long-pic" src="images/ok_show/17.png" alt="">
+				<div class="zcool-link-wrapper">
+					<a target="_blank" class="link-btn" href="http://www.zcool.com.cn/work/ZMjMxMDkyMTY=.html">站酷作品链接</a>
+				</div>
 			</div>
 		</div>
 		<!-- xzcsh -->
